official web site.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IWangCa Default Website</title>
-</head>
-<body>
-  <a href="user-service-and-privacy-policy">使用者服務與隱私條款</a>
-</body>
+<html lang="zh-TW">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IwantCard</title>
+    <link rel="stylesheet" href="index-styles.css" />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="important-info.html">重要資訊</a></li>
+          <li><a href="about-us.html">關於我們</a></li>
+          <li><a href="privacy-policy.html">隱私權政策</a></li>
+          <li><a href="contact-us.html">聯絡我們</a></li>
+          <li>
+            <a href="user-service-and-privacy-policy">使用者服務與隱私條款</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <div class="main-container">
+      <div class="carousel">
+        <div class="slides">
+          <img src="photo/關於我們1.jpg" alt="Image 1" class="active" />
+          <img src="photo/關於我們2.jpg" alt="Image 2" />
+        </div>
+      </div>
+      <div class="content">
+        <h1>iCard</h1>
+        <p>TCG遊戲交易平台</p>
+        <div class="app-icons">
+          <img src="appstore.png" alt="App Store" />
+          <img src="googleplay.png" alt="Google Play" />
+        </div>
+      </div>
+    </div>
+    <div class="footer"></div>
+    <script src="scripts.js"></script>
+  </body>
 </html>
