--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         </div>
       </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+      <p>該網頁由愛王卡國際股份有限公司所有</p>
+    </div>
     <script src="scripts.js"></script>
   </body>
 </html>
