--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </div>
       </div>
     </div>
-    <div class="footer">
+    <footer>
       <p>該網頁由愛王卡國際股份有限公司所有</p>
-    </div>
+    </footer>
     <script src="scripts.js"></script>
   </body>
 </html>
