--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
         <h1>iCard</h1>
         <p>TCG遊戲交易平台</p>
         <div class="app-icons">
-          <img src="appstore.png" alt="App Store" />
-          <img src="googleplay.png" alt="Google Play" />
+          <a href="https://apps.apple.com/app/icard%E6%84%9B%E5%8D%A1/id6473510807">
+            <img src="photo/apple store.jpg" alt="App Store" />
+          </a>
+          <a href="https://drive.google.com/file/d/1PsJJGu30Y8NK7q_WTC_fhcJbbSmIrK85/view?usp=sharing">
+            <img src="photo/google play.jpg" alt="Google Play" />
+          </a>
         </div>
       </div>
     </div>
-    <footer>
-      <p>該網頁由愛王卡國際股份有限公司所有</p>
-    </footer>
+    <div class="footer"></div>
     <script src="scripts.js"></script>
   </body>
 </html>
