--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>iCard - TCG遊戲交易平台</title>
+    <title>iCard愛卡 - TCG遊戲交易平台</title>
     <style>
         :root {
             --main-color: #FFB97D;
@@ -178,10 +178,10 @@
         <p>您的首選TCG遊戲交易平台</p>
         <div class="app-icons">
             <a href="https://apps.apple.com/app/icard%E6%84%9B%E5%8D%A1/id6473510807">
-                <img src="/api/placeholder/150/50" alt="App Store">
+                <img src="photo/apple store.jpg" alt="App Store">
             </a>
             <a href="https://drive.google.com/file/d/1PsJJGu30Y8NK7q_WTC_fhcJbbSmIrK85/view?usp=sharing">
-                <img src="/api/placeholder/150/50" alt="Google Play">
+                <img src="photo/google play.jpg" alt="Google Play">
             </a>
         </div>
     </div>
@@ -189,11 +189,13 @@
     <div class="partners">
         <h2>合作平台</h2>
         <div class="partner">
-            <img src="/api/placeholder/100/100" alt="PayUni金物流">
+          <a href="https://www.payuni.com.tw/">
+            <img src="photo/payuni.png" alt="PayUni金物流">
             <p>PayUni金物流</p>
         </div>
         <div class="partner">
-            <img src="/api/placeholder/100/100" alt="光貿電子發票平台">
+          <a href="https://invoice.amego.tw/">
+            <img src="photo/amego.jpg" alt="光貿電子發票平台">
             <p>光貿電子發票平台</p>
         </div>
     </div>
