--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <a href="https://apps.apple.com/app/icard%E6%84%9B%E5%8D%A1/id6473510807">
                 <img src="photo/apple store.jpg" alt="App Store">
             </a>
-            <a href="https://drive.google.com/file/d/1PsJJGu30Y8NK7q_WTC_fhcJbbSmIrK85/view?usp=sharing">
+            <a href="https://play.google.com/store/apps/details?id=com.icard.tcg_card_shop">
                 <img src="photo/google play.jpg" alt="Google Play">
             </a>
         </div>
@@ -201,7 +201,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 iCard. All rights reserved.</p>
+        <p>&copy; 2024 iCard. 愛王卡國際股份有限公司.</p>
     </footer>
 
     <script>
