--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,10 @@
             <ul>
                 <li><a href="index.html">首頁</a></li>
                 <li><a href="important-info.html">重要資訊</a></li>
+                <li><a href="about-us.html">關於我們</a></li>
                 <li><a href="privacy-policy.html">隱私權政策</a></li>
+                <li><a href="important-info.html">服務條款</a></li>
+                <li><a href="return-policy.html">退換貨政策</a></li>
                 <li><a href="contact-us.html">聯絡我們</a></li>
             </ul>
         </nav>
