--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iCard愛卡 - TCG遊戲交易平台</title>
+    <link rel="icon" href="photo/iCard.png" type="image/png">
+
     <style>
         :root {
             --main-color: #FFB97D;
