--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -353,7 +353,7 @@
     </div>
     
     <footer>
-        <p>&copy; 2024 iCard. All rights reserved.</p>
+        <p>&copy; 2024 iCard. 愛王卡國際股份有限公司.</p>
     </footer>
 </body>
 </html>
