--- a/index.html
+++ b/index.html
@@ -149,6 +149,31 @@
             position: relative;
             width: 100%;
         }
+        /* 新增動畫區塊樣式 */
+        .animation-container {
+            width: 200px;
+            height: 200px;
+            margin: 20px auto;
+            position: relative;
+            overflow: hidden;
+        }
+        .animation-frame {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            animation: frameAnimation 10s infinite;
+        }
+        @keyframes frameAnimation {
+            0%, 100% { opacity: 0; }
+            3.33%, 33.33% { opacity: 1; }
+            36.66% { opacity: 0; }
+        }
+        .animation-frame:nth-child(1) { animation-delay: 0s; }
+        .animation-frame:nth-child(2) { animation-delay: 3.33s; }
+        .animation-frame:nth-child(3) { animation-delay: 6.66s; }
     </style>
 </head>
 <body>
@@ -171,12 +196,21 @@
     </header>
 
     <div class="carousel">
-        <img src="/api/placeholder/1200/400" alt="Image 1" class="active">
-        <img src="/api/placeholder/1200/400" alt="Image 2">
+        <img src="photo/0814P1.png" alt="Image 1" class="active">
+        <img src="photo/0814P2.png" alt="Image 2">
+        <img src="photo/0814P3.png" alt="Image 2">
     </div>
 
     <div class="content">
         <h1>iCard</h1>
+        
+        <!-- 新增動畫區塊 -->
+        <div class="animation-container">
+            <img src="photo/0814P1.png" alt="Animation Frame 1" class="animation-frame">
+            <img src="/api/placeholder/200/200" alt="Animation Frame 2" class="animation-frame">
+            <img src="/api/placeholder/200/200" alt="Animation Frame 3" class="animation-frame">
+        </div>
+
         <p>您的首選TCG遊戲交易平台</p>
         <div class="app-icons">
             <a href="https://apps.apple.com/app/icard%E6%84%9B%E5%8D%A1/id6473510807">
@@ -194,16 +228,18 @@
           <a href="https://www.payuni.com.tw/">
             <img src="photo/payuni.png" alt="PayUni金物流">
             <p>PayUni金物流</p>
+          </a>
         </div>
         <div class="partner">
           <a href="https://invoice.amego.tw/">
             <img src="photo/amego.jpg" alt="光貿電子發票平台">
             <p>光貿電子發票平台</p>
+          </a>
         </div>
     </div>
 
     <footer>
-        <p>&copy; 2024 iCard. 愛王卡國際股份有限公司.</p>
+        <p>© 2024 iCard. 愛王卡國際股份有限公司</p>
     </footer>
 
     <script>
