--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             background-color: var(--white);
         }
         .container {
-            width: 80%;
+            width: 90%;
             margin: auto;
             overflow: hidden;
         }
@@ -74,22 +74,28 @@
         }
         .carousel {
             width: 100%;
-            height: 400px;
             position: relative;
             overflow: hidden;
+            aspect-ratio: 16 / 9;  /* 设置一个固定的宽高比，可以根据需要调整 */
+            max-height: 90vh;  /* 限制最大高度，避免在大屏幕上过大 */
         }
         .carousel-inner {
             display: flex;
             transition: transform 0.5s ease-in-out;
+            height: 100%;
         }
         .carousel-item {
             min-width: 100%;
-            height: 400px;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f0f0f0;  /* 添加背景色，以便在图片加载时可见 */
         }
         .carousel-item img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;  /* 确保整个图片可见 */
         }
         .carousel-nav {
             position: absolute;
@@ -97,6 +103,9 @@
             left: 50%;
             transform: translateX(-50%);
             display: flex;
+            background-color: rgba(0, 0, 0, 0.5);  /* 半透明背景 */
+            padding: 5px 10px;
+            border-radius: 15px;
         }
         .carousel-nav-item {
             width: 10px;
@@ -105,6 +114,7 @@
             background-color: #fff;
             margin: 0 5px;
             cursor: pointer;
+            transition: background-color 0.3s ease;
         }
         .carousel-nav-item.active {
             background-color: var(--dark-orange);
@@ -203,7 +213,6 @@
             </div>
             <nav>
               <ul>
-                <li><a href="index.html">首頁</a></li>
                 <li><a href="important-info.html">重要資訊</a></li>
                 <li><a href="about-us.html">關於我們</a></li>
                 <li><a href="privacy-policy.html">隱私權政策與服務條款</a></li>
@@ -216,9 +225,9 @@
 
     <div class="carousel">
       <div class="carousel-inner">
-          <div class="carousel-item"><img src="photo/0814P1.png" alt="Image 1"></div>
-          <div class="carousel-item"><img src="photo/0814P2.png" alt="Image 2"></div>
-          <div class="carousel-item"><img src="photo/0814P3.png" alt="Image 3"></div>
+          <div class="carousel-item"><img src="photo/0814P1.png" alt="Image 1" loading="lazy"></div>
+          <div class="carousel-item"><img src="photo/0814P2.png" alt="Image 2" loading="lazy"></div>
+          <div class="carousel-item"><img src="photo/0814P3.png" alt="Image 3" loading="lazy"></div>
       </div>
       <div class="carousel-nav"></div>
   </div>
