--- a/index.html
+++ b/index.html
@@ -74,50 +74,78 @@
         }
         .carousel {
             width: 100%;
+            height: 250px;
             position: relative;
             overflow: hidden;
-            aspect-ratio: 16 / 9;  /* 设置一个固定的宽高比，可以根据需要调整 */
-            max-height: 90vh;  /* 限制最大高度，避免在大屏幕上过大 */
+            perspective: 1000px;
         }
         .carousel-inner {
-            display: flex;
-            transition: transform 0.5s ease-in-out;
+            position: absolute;
+            width: 100%;
             height: 100%;
+            transform-style: preserve-3d;
+            transition: transform 0.5s;
         }
         .carousel-item {
-            min-width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f0f0f0;  /* 添加背景色，以便在图片加载时可见 */
+            position: absolute;
+            width: 450px;  /* 增加宽度 */
+            height: 200px; /* 保持高度不变 */
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%) rotateY(0deg) translateZ(500px);
+            transition: all 0.5s;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+            border-radius: 10px;
+            overflow: hidden;
         }
         .carousel-item img {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: contain;  /* 确保整个图片可见 */
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         .carousel-nav {
             position: absolute;
-            bottom: 20px;
+            bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
-            background-color: rgba(0, 0, 0, 0.5);  /* 半透明背景 */
+            background-color: rgba(0, 0, 0, 0.5);
             padding: 5px 10px;
             border-radius: 15px;
         }
         .carousel-nav-item {
-            width: 10px;
-            height: 10px;
+            width: 8px;
+            height: 8px;
             border-radius: 50%;
             background-color: #fff;
-            margin: 0 5px;
+            margin: 0 4px;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
         .carousel-nav-item.active {
             background-color: var(--dark-orange);
+        }
+        .carousel-arrow {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 40px;
+            height: 40px;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            font-size: 20px;
+            border-radius: 50%;
+            z-index: 10;
+        }
+        .carousel-arrow.left {
+            left: 10px;
+        }
+        .carousel-arrow.right {
+            right: 10px;
         }
         .content {
             text-align: center;
@@ -223,14 +251,20 @@
         </div>
     </header>
 
+
     <div class="carousel">
       <div class="carousel-inner">
           <div class="carousel-item"><img src="photo/0814P1.png" alt="Image 1" loading="lazy"></div>
           <div class="carousel-item"><img src="photo/0814P2.png" alt="Image 2" loading="lazy"></div>
           <div class="carousel-item"><img src="photo/0814P3.png" alt="Image 3" loading="lazy"></div>
+          <!-- 根据需要添加更多图片 -->
       </div>
       <div class="carousel-nav"></div>
+      <div class="carousel-arrow left">&lt;</div>
+      <div class="carousel-arrow right">&gt;</div>
   </div>
+
+
 
     <div class="content">
         <h1>iCard</h1>
@@ -272,59 +306,54 @@
     <footer>
         <p>© 2024 iCard. 愛王卡國際股份有限公司</p>
     </footer>
-
+    
     <script>
-      // 更新轮播图脚本
-      const carouselInner = document.querySelector('.carousel-inner');
-      const carouselItems = document.querySelectorAll('.carousel-item');
-      const carouselNav = document.querySelector('.carousel-nav');
-      let currentSlide = 0;
+      const carousel = document.querySelector('.carousel-inner');
+      const items = document.querySelectorAll('.carousel-item');
+      const navItems = document.querySelector('.carousel-nav');
+      let currentIndex = 0;
 
       // 创建导航点
-      carouselItems.forEach((_, index) => {
-          const navItem = document.createElement('div');
-          navItem.classList.add('carousel-nav-item');
-          navItem.addEventListener('click', () => goToSlide(index));
-          carouselNav.appendChild(navItem);
+      items.forEach((_, index) => {
+          const dot = document.createElement('div');
+          dot.classList.add('carousel-nav-item');
+          dot.addEventListener('click', () => goToSlide(index));
+          navItems.appendChild(dot);
       });
 
       function updateCarousel() {
-          carouselInner.style.transform = `translateX(-${currentSlide * 100}%)`;
-          document.querySelectorAll('.carousel-nav-item').forEach((item, index) => {
-              item.classList.toggle('active', index === currentSlide);
+          const angle = currentIndex * -360 / items.length;
+          carousel.style.transform = `rotateY(${angle}deg)`;
+          items.forEach((item, index) => {
+              const itemAngle = (index - currentIndex) * 360 / items.length;
+              item.style.transform = `translate(-50%, -50%) rotateY(${itemAngle}deg) translateZ(500px)`;
+              item.style.opacity = index === currentIndex ? 1 : 0.5;
+          });
+          document.querySelectorAll('.carousel-nav-item').forEach((dot, index) => {
+              dot.classList.toggle('active', index === currentIndex);
           });
       }
 
-      function goToSlide(n) {
-          currentSlide = n;
+      function goToSlide(index) {
+          currentIndex = index;
           updateCarousel();
       }
 
       function nextSlide() {
-          currentSlide = (currentSlide + 1) % carouselItems.length;
+          currentIndex = (currentIndex + 1) % items.length;
           updateCarousel();
       }
 
-      setInterval(nextSlide, 5000);
+      function prevSlide() {
+          currentIndex = (currentIndex - 1 + items.length) % items.length;
+          updateCarousel();
+      }
+
+      document.querySelector('.carousel-arrow.left').addEventListener('click', prevSlide);
+      document.querySelector('.carousel-arrow.right').addEventListener('click', nextSlide);
+
       updateCarousel();
-
-      // 添加触摸滑动功能
-      let touchStartX = 0;
-      let touchEndX = 0;
-
-      carouselInner.addEventListener('touchstart', e => {
-          touchStartX = e.changedTouches[0].screenX;
-      }, false);
-
-      carouselInner.addEventListener('touchend', e => {
-          touchEndX = e.changedTouches[0].screenX;
-          if (touchStartX - touchEndX > 50) {
-              nextSlide();
-          } else if (touchEndX - touchStartX > 50) {
-              currentSlide = (currentSlide - 1 + carouselItems.length) % carouselItems.length;
-              updateCarousel();
-          }
-      }, false);
+      setInterval(nextSlide, 5000);
   </script>
 </body>
 </html>
