輪播圖先拿掉

--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
 
     <div class="carousel">
       <div class="carousel-inner">
-          <div class="carousel-item"><img src="photo/0814P1.png" alt="Image 1" loading="lazy"></div>
-          <div class="carousel-item"><img src="photo/0814P2.png" alt="Image 2" loading="lazy"></div>
-          <div class="carousel-item"><img src="photo/0814P3.png" alt="Image 3" loading="lazy"></div>
+          <div class="carousel-item"><img src="" alt="Image 1" loading="lazy"></div>
+          <div class="carousel-item"><img src="" alt="Image 2" loading="lazy"></div>
+          <div class="carousel-item"><img src="" alt="Image 3" loading="lazy"></div>
           <!-- 根据需要添加更多图片 -->
       </div>
       <div class="carousel-nav"></div>
