--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <li><a href="privacy-policy.html">隱私權政策與服務條款</a></li>
                 <li><a href="return-policy.html">退換貨政策</a></li>
                 <li><a href="contact-us.html">聯絡我們</a></li>
-                <li><a href="recapthcha.html">測試</a></li>
+                <!-- <li><a href="recapthcha.html"></a></li> -->
             </ul>
             </nav>
         </div>
