--- a/recapthcha.html
+++ b/recapthcha.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>reCAPTCHA</title>
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>reCAPTCHA v3 Test</title>
+    <!-- Step 2: Include the reCAPTCHA v3 script -->
+    <script src="https://www.google.com/recaptcha/api.js?render=6LdCei0qAAAAAJKV4DxdrCuSACZq_8QsA9KJ9qhq"></script>
 </head>
 <body>
-  <form action="?" method="POST">
-    <div class="g-recaptcha" data-sitekey="6LewYy0qAAAAAOkEVKhdBMOHN9u13xrre1UVzydP"></div>
-    <br/>
-    <input type="submit" value="Submit">
-  </form>
+    <h1>reCAPTCHA v3 Token Test</h1>
+    <button id="recaptchaButton">Get reCAPTCHA Token</button>
+    <p id="tokenOutput"></p>
+
+    <script>
+        document.getElementById('recaptchaButton').addEventListener('click', function() {
+            grecaptcha.ready(function() {
+                // Replace 'your_action' with the action name you want to use
+                grecaptcha.execute('6LdCei0qAAAAAJKV4DxdrCuSACZq_8QsA9KJ9qhq', {action: 'homepage'}).then(function(token) {
+                    // Print the token to the output paragraph
+                    document.getElementById('tokenOutput').innerText = 'reCAPTCHA Token: ' + token;
+                    console.log('reCAPTCHA Token:', token);
+                });
+            });
+        });
+    </script>
 </body>
 </html>
