--- a/index.html
+++ b/index.html
@@ -334,9 +334,9 @@
 
         <!-- 新增動畫區塊 -->
         <div class="animation-container">
-            <img src="photo/0814P1.png" alt="Animation Frame 1" class="animation-frame">
-            <img src="/api/placeholder/200/200" alt="Animation Frame 2" class="animation-frame">
-            <img src="/api/placeholder/200/200" alt="Animation Frame 3" class="animation-frame">
+            <img src="photo/1.jpg" alt="Animation Frame 1" class="animation-frame">
+            <img src="photo/2.jpg" alt="Animation Frame 2" class="animation-frame">
+            <img src="photo/3.jpg" alt="Animation Frame 3" class="animation-frame">
         </div>
 
         <p>您的首選TCG遊戲交易平台</p>
