--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
         <h2>合作平台</h2>
         <div class="partner">
             <a href="https://www.payuni.com.tw/">
-                <img src="photo/payuni.png" alt="PayUni金物流">
-                <p>PayUni金物流</p>
+                <img src="photo/payuni.png" alt="PAYUNi金物流">
+                <p>PAYUNi金物流</p>
             </a>
         </div>
         <div class="partner">
