--- a/index.html
+++ b/index.html
@@ -186,10 +186,61 @@
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
         }
 
-        .app-icons {
+        /* 新增的功能展示樣式 */
+        .features-container {
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
-            margin-top: 20px;
+            gap: 20px;
+            margin: 30px auto;
+            max-width: 1300px;
+        }
+
+        .feature {
+            width: 300px;
+            text-align: center;
+            background-color: var(--white);
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            transition: transform 0.3s ease;
+        }
+
+        .feature:hover {
+            transform: translateY(-5px);
+        }
+
+        .feature-img {
+            width: 100%;
+            height: 500px;
+            object-fit: cover;
+        }
+
+        .feature-desc {
+            padding: 15px;
+            color: var(--text-color);
+            font-weight: bold;
+            font-size: 16px;
+            background-color: var(--light-orange);
+            margin: 0;
+            min-height: 40px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* 為網頁版按鈕添加樣式 */
+        .web-button {
+            width: 150px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border: 2px solid var(--dark-orange);
+        }
+
+        /* 調整 app-icons 的樣式 */
+        .app-icons {
+            gap: 20px;
+            padding: 20px 0;
         }
 
         .app-icons a {
@@ -317,9 +368,9 @@
 
     <div class="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item"><img src="photo/輪播圖1.png" alt="Image 1" loading="lazy"></div>
-            <div class="carousel-item"><img src="photo/輪播圖2.png" alt="Image 2" loading="lazy"></div>
-            <div class="carousel-item"><img src="photo/輪播圖3.png" alt="Image 3" loading="lazy"></div>
+            <div class="carousel-item"><img src="photo/icard-廣告.jpg" alt="Image 1" loading="lazy"></div>
+            <!-- <div class="carousel-item"><img src="photo/輪播圖2.png" alt="Image 2" loading="lazy"></div>
+            <div class="carousel-item"><img src="photo/輪播圖3.png" alt="Image 3" loading="lazy"></div> -->
             <!-- 根据需要添加更多图片 -->
         </div>
         <div class="carousel-nav"></div>
@@ -327,16 +378,28 @@
         <div class="carousel-arrow right">&gt;</div>
     </div>
 
-
-
+    <!-- 修改後的內容區塊 -->
     <div class="content">
         <h1>iCard</h1>
 
-        <!-- 新增動畫區塊 -->
-        <div class="animation-container">
-            <img src="photo/1.jpg" alt="Animation Frame 1" class="animation-frame">
-            <img src="photo/2.jpg" alt="Animation Frame 2" class="animation-frame">
-            <img src="photo/3.jpg" alt="Animation Frame 3" class="animation-frame">
+        <!-- 改為靜態圖片展示 -->
+        <div class="features-container">
+            <div class="feature">
+                <img src="photo/網頁板廣告.jpg" alt="功能圖片 1" class="feature-img">
+                <p class="feature-desc">iCard網頁板</p>
+            </div>
+            <div class="feature">
+                <img src="photo/商品交易.jpg" alt="功能圖片 2" class="feature-img">
+                <p class="feature-desc">專業交易</p>
+            </div>
+            <div class="feature">
+                <img src="photo/批量買卡.jpg" alt="功能圖片 3" class="feature-img">
+                <p class="feature-desc">批量買卡</p>
+            </div>
+            <div class="feature">
+                <img src="photo/牌組專區.jpg" alt="功能圖片 3" class="feature-img">
+                <p class="feature-desc">牌組專區</p>
+            </div>
         </div>
 
         <p>您的首選TCG遊戲交易平台</p>
@@ -346,6 +409,9 @@
             </a>
             <a href="https://play.google.com/store/apps/details?id=com.icard.tcg_card_shop">
                 <img src="photo/google play.jpg" alt="Google Play">
+            </a>
+            <a href="https://web.iwantcard.tw">
+                <img src="photo/網頁.svg" alt="網頁版" class="web-button">
             </a>
         </div>
     </div>
